# mycelium

./: .gitignore  .gitmodules  AGENTS.md  APR_HANDOFF.md  APR_HANDOFF_2026-02-25.md  APR_MODEL_SELECTION_HANDOFF.md  APR_ORACLE_EXTENDED_PRO_INVESTIGATION_HANDOFF_2026-02-25.md  APR_STABILIZATION_FINDINGS_2026-02-25.md  CHANGELOG.md  CLAUDE.md  CURRENT_STATE.md  INGEST_CANDIDATES.md  README.md  ROADMAP.md  SPEC.orchestrator-handoff.md  SPEC.round1.md  SPEC.round2.md  SPEC.round3.md  SPEC.round4.md  SPEC.round5.md  TARGET_VISION.md  TOY_CURRENT_STATE.md  TOY_SPEC.md  TOY_TARGET_VISION.md  TOY_TINY_SPEC.md  WORKFLOW.md  package.json  pyproject.toml  requirements.txt
.apr/: config.yaml
.beads/: README.md  issues.jsonl
.claude/: ralph-loop.local.md
.github/: copilot-instructions.md
.mycelium/: CONTRACT.md  WORKFLOW.md
ai-team/: CONTRACT.md  README.md  WORKFLOW.md
sandbox/: README.md  plot.py
scripts/: mycelium
specs/: CLAUDE.md  README.md
src/: __init__.py
tests/: bench_graph.py  test_artifact_staging.py  test_audit.py  test_auto_approval.py  test_benchmark_perf001.py  test_canonicalize.py  test_capture.py  test_cli.py  test_comparator.py  test_compare_stage.py  test_confidence.py  test_context.py  test_delta.py  test_delta_report.py  test_delta_stage.py  test_deterministic.py  test_e2e_workflows.py  test_egress.py  test_egress_config.py  test_errors.py  test_extract.py  test_fingerprint.py  test_frontier.py  test_future_stubs.py  test_git_mode.py  test_golden_fixtures.py  test_graduate.py  test_graduate_promotion.py  test_graph.py  test_graph_analysis.py  (+42 more)
(+265 files in other folders)
